master adding property file